// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QUERY MOCK TESTS Mocking Courses 1`] = `
Object {
  "courses": Array [
    Object {
      "CourseID": Object {
        "code": "14.242.114.207",
        "subject": "Prohaska and Sons",
        "term": "FALL",
      },
      "capacity": 79667,
      "endDate": "uPC++p*SiA",
      "hoursPerWeek": 8209,
      "meetingTimes": Array [
        Object {
          "day": "FRIDAY",
          "endTime": "i\`4hG;?K.5",
          "startTime": "x^2}!Z{e]H",
        },
      ],
      "professors": Array [
        Object {
          "active": true,
          "id": 38395,
          "password": "Savings Account",
          "preferences": Array [
            Object {
              "id": Object {
                "code": "218.172.178.179",
                "subject": "Larkin, Morissette and Aufderhar",
                "term": "FALL",
              },
              "preference": 75682,
            },
          ],
          "role": "USER",
          "username": "Emmalee",
        },
      ],
      "startDate": "C&'Aj+?zm)",
    },
    Object {
      "CourseID": Object {
        "code": "144.111.49.112",
        "subject": "Nienow - Green",
        "term": "FALL",
      },
      "capacity": 25715,
      "endDate": "\`R{K,\\\\b))T",
      "hoursPerWeek": 1043,
      "meetingTimes": Array [
        Object {
          "day": "FRIDAY",
          "endTime": "K3vPOA{')I",
          "startTime": "1iG)9Dwvdo",
        },
      ],
      "professors": Array [
        Object {
          "active": true,
          "id": 37600,
          "password": "Checking Account",
          "preferences": Array [
            Object {
              "id": Object {
                "code": "218.172.178.179",
                "subject": "Larkin, Morissette and Aufderhar",
                "term": "FALL",
              },
              "preference": 75682,
            },
          ],
          "role": "USER",
          "username": "Dawson",
        },
      ],
      "startDate": "\`!J$b?=\\"(2",
    },
  ],
}
`;

exports[`QUERY MOCK TESTS Mocking Schedule 1`] = `
Object {
  "schedule": Object {
    "courses": Array [
      Object {
        "CourseID": Object {
          "code": "193.33.198.29",
          "subject": "Effertz, Raynor and Schmitt",
          "term": "FALL",
        },
        "capacity": 71492,
        "endDate": "]++3eAFS)<",
        "hoursPerWeek": 76506,
        "meetingTimes": Array [
          Object {
            "day": "FRIDAY",
            "endTime": "t\`|hhk}{nh",
            "startTime": "]f+Fa=.H.7",
          },
        ],
        "professors": Array [
          Object {
            "active": true,
            "id": 27706,
            "password": "Savings Account",
            "preferences": Array [
              Object {
                "id": Object {
                  "code": "218.172.178.179",
                  "subject": "Larkin, Morissette and Aufderhar",
                  "term": "FALL",
                },
                "preference": 75682,
              },
            ],
            "role": "USER",
            "username": "Brycen",
          },
        ],
        "startDate": "u\\"{F{GJ]r^",
      },
    ],
    "createdAt": ".tKW>j%NY2",
    "id": "Cote d'Ivoire",
    "year": 9,
  },
}
`;

exports[`QUERY MOCK TESTS Mocking findUserByID 1`] = `
Object {
  "findUserById": Object {
    "active": true,
    "id": 29639,
    "password": "Checking Account",
    "preferences": Array [
      Object {
        "id": Object {
          "code": "218.172.178.179",
          "subject": "Larkin, Morissette and Aufderhar",
          "term": "FALL",
        },
        "preference": 75682,
      },
    ],
    "role": "USER",
    "username": "Sean",
  },
}
`;

exports[`QUERY MOCK TESTS Mocking me 1`] = `
Object {
  "me": Object {
    "active": true,
    "id": 51909,
    "password": "Personal Loan Account",
    "preferences": Array [
      Object {
        "id": Object {
          "code": "218.172.178.179",
          "subject": "Larkin, Morissette and Aufderhar",
          "term": "FALL",
        },
        "preference": 75682,
      },
    ],
    "role": "USER",
    "username": "Delmer",
  },
}
`;

exports[`QUERY MOCK TESTS Mocking survey 1`] = `
Object {
  "survey": Object {
    "courses": Array [
      Object {
        "code": "207.121.7.91",
        "subject": "McLaughlin - Powlowski",
        "term": "FALL",
      },
    ],
  },
}
`;
